# mnemos-evolved

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-linux.yml  build-windows.yml  testing.yml
application/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
engine/: engine.cpp
engine/core/filesystem/: filesystem.cpp  filesystem.hpp
engine/core/logging/: log.cpp  log.hpp
engine/core/parsers/: bmp_parser.hpp  data_formats.hpp  obj_parser.hpp
engine/core/timer/: timer.cpp  timer.hpp
engine/debug/: debug.cpp
engine/ecs/: types.hpp
engine/ecs/components/: camera.hpp  light.hpp  material.hpp  renderable.hpp  transform.hpp
engine/ecs/core/: component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  system.hpp  system_manager.hpp
engine/ecs/systems/: camera_system.cpp  camera_system.hpp  light_system.cpp  light_system.hpp  render_system.cpp  render_system.hpp
engine/math/: matrix.hpp  vector.hpp
engine/platform/: platform.hpp  types.hpp
engine/platform/input/: input.cpp  input_system.hpp
engine/platform/window/: window.hpp
engine/platform/window/win32/: window.cpp
engine/platform/window/x11/: window.cpp
engine/renderer/: renderer.cpp  renderer.hpp  renderer_factory.cpp  renderer_factory.hpp
engine/renderer/opengl/: framebuffer.cpp  framebuffer.hpp  glad.c  mesh.cpp  mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
engine/renderer/structs/: material.hpp  vertex.hpp
include/: application.hpp  debug.hpp  defines.hpp  input.hpp  mnemos.hpp
resources/shaders/: pbr.frag  phong.frag  phong_directional.frag  phong_point.frag  test.frag  test.vert
